# bixplot

./: LICENSE  README.md  pyproject.toml
bixplot/: __init__.py  bixplot.py  colors.py  pamc1d.py
examples/: paper visuals python.html  paper visuals python.ipynb
examples/data/: AVONET Supplementary dataset 1.csv  AVONET1_BirdLife_alcedinidae.csv  BehaviourTrials.csv  README.md
